Delete webio connection string. Password has been changed ;)

--- a/SharpBlog.Client/appsettings.json
+++ b/SharpBlog.Client/appsettings.json
@@ -6,8 +6,7 @@
     "salt": "random text"
   },
   "ConnectionStrings": {
-    "LocalConnection": "Server=.;Database=SharpBlog;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "WebioConnection": "Server=mssql5.webio.pl,2401;Database=landuch_sharpapp;User ID=landuch_administrator;Password=Wxcm$l333"
+    "LocalConnection": "Server=.;Database=SharpBlog;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
