Added post categories Refactored a lot of code

--- a/SharpBlog.Client/appsettings.Development.json
+++ b/SharpBlog.Client/appsettings.Development.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "forceWwwPrefix": false,
+    "user": {
+        "reset": false,
+        "salt": "random text"
+    },
+    "ConnectionStrings": {
+        "Connection": "Server=.;Database=SharpBlog;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
     }
-  }
 }
