Added settings service Added rss and atom feeds Added robotstxt Added sitemap

--- a/SharpBlog.Client/SharpBlog.Client.csproj
+++ b/SharpBlog.Client/SharpBlog.Client.csproj
@@ -21,8 +21,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
 
 
