--- a/SharpBlog.Client/appsettings.json
+++ b/SharpBlog.Client/appsettings.json
@@ -1,4 +1,10 @@
 {
+    "blogDetails": {
+        "name": "Sharpapp",
+        "description": "Hi I'm Mark! I'm a C# enthusiast and .NET developer. Sharpapp.net is a website where I would like to share my work.",
+        "icon": "/img/icon.png",
+        "logo512x512": "/img/logo512x512.png"
+    },
     "forceSsl": true,
     "forceWwwPrefix": true,
     "user": {
