--- a/SharpBlog.Client/appsettings.json
+++ b/SharpBlog.Client/appsettings.json
@@ -5,6 +5,12 @@
         "icon": "/img/icon.png",
         "logo512x512": "/img/logo512x512.png"
     },
+    "reCaptcha": {
+        "enabled": false,
+        "publicKey": "",
+        "privateKey": ""
+    },
+    "recaptchaEnabled": true,
     "forceSsl": true,
     "forceWwwPrefix": true,
     "user": {
