--- a/SharpBlog.Client/appsettings.json
+++ b/SharpBlog.Client/appsettings.json
@@ -1,27 +1,26 @@
 {
-    "blogDetails": {
-        "name": "Sharpapp",
-        "description": "Hi I'm Mark! I'm a C# enthusiast and .NET developer. Sharpapp.net is a website where I would like to share my work.",
-        "icon": "/img/icon.png",
-        "logo512x512": "/img/logo512x512.png"
-    },
-    "reCaptcha": {
-        "enabled": false,
-        "publicKey": "",
-        "privateKey": ""
-    },
-    "forceSsl": true,
-    "forceWwwPrefix": true,
-    "user": {
-        "reset": false,
-        "salt": "random text"
-    },
-    "ConnectionStrings": {
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "blogDetails": {
+    "name": "Sharpapp",
+    "description": "Hi I'm Mark! I'm a C# enthusiast and .NET developer. Sharpapp.net is a website where I would like to share my work.",
+    "icon": "/img/icon.png",
+    "logo512x512": "/img/logo512x512.png"
+  },
+  "reCaptcha": {
+    "enabled": false,
+    "publicKey": "",
+    "privateKey": ""
+  },
+  "forceSsl": true,
+  "forceWwwPrefix": true,
+  "user": {
+    "reset": false,
+    "salt": "random text"
+  },
+  "ConnectionStrings": {},
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
