--- a/SharpBlog.Client/Properties/launchSettings.json
+++ b/SharpBlog.Client/Properties/launchSettings.json
@@ -17,6 +17,7 @@
     },
     "SharpBlog.Client": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
