--- a/SharpBlog.Core/SharpBlog.Common.csproj
+++ b/SharpBlog.Core/SharpBlog.Common.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharpBlog.Db\SharpBlog.Db.csproj" />
+    <ProjectReference Include="..\SharpBlog.Db\SharpBlog.Database.csproj" />
   </ItemGroup>
 
 </Project>
